LPD-80123 Fix overlapping Assets header

--- a/modules/apps/site/site-cms-site-initializer/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/site/site-cms-site-initializer/src/main/resources/META-INF/resources/css/main.scss
@@ -29,6 +29,7 @@
 }
 
 .cms-related-assets {
+	padding-top: 1px;
 	position: relative;
 
 	.cms-related-assets-header {
@@ -61,7 +62,7 @@
 	.fds {
 		.data-set-wrapper {
 			.c-empty-state {
-				margin: 0;
+				margin: 4rem 0 0;
 			}
 
 			&.drop-target {
